@@ -1,6 +1,7 @@
 Revision history for IO-Uring
 
 {{$NEXT}}
+          - Use Alien::liburing
 
 0.003     2025-04-01 22:13:31+02:00 Europe/Brussels
           - Add pflags argument to recv and send
